src/test/deca/syntax/invalid/test_synt25.deca
//Resultat:
//      Erreur syntaxique : else sans {} 
{
if ( x == 2 ) {
   print("Instruction et non déclaration");
}else
}
